import { BrowserRouter, Routes, Route } from 'react-router-dom'
import Layout from './components/Layout'
import Dashboard from './pages/Dashboard'
import Patients from './pages/Patients'
import PatientDetails from './pages/PatientDetails'
import Messages from './pages/Messages'
import Schedule from './pages/Schedule'
import Reports from './pages/Reports'
import Login from './pages/Login'
...
