appId: com.example.flutter_app
tags: ["P0", "patient", "profile"]
---
# Test: View Patient Profile
# Priority: High
# Description: Patient can view profile details.

- runFlow:
    when:
      notVisible: "Home"
    file: "../../helpers/common_flows/sign_in_patient.yaml"
- tapOn:
    point: "7%,6%" #menu button
- assertVisible: "Profile"
- tapOn: "Profile"
- assertVisible: "Profile"
- assertVisible: ".*RW.*"
- assertVisible: ".*Robert Williams.*"
- assertVisible: ".*Patient ID.*"
- assertVisible: "Personal Information,*"
- assertVisible: ".*Age.*"
- assertVisible: ".*Email.*"
- assertVisible: ".*Phone.*"
- assertVisible: ".*Address.*"
- back
